<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        app:title="@string/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />
    <EditText
        android:id="@+id/userName"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <EditText
        android:hint="@string/password"
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"></EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnDangNhap"
        />
</LinearLayout>