<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChitietsachActivity1"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarchitiet"
        app:title="@string/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="100px"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        ></TextView>
    <ImageView
        android:id="@+id/imvChiTiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        ></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:text="@string/idBook">
        </TextView>
        <EditText
            android:background="@drawable/offunderline"
            android:id="@+id/etChiTietId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:text="@string/nameBook">
        </TextView>
        <EditText
            android:background="@drawable/offunderline"

            android:id="@+id/etChiTietTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:text="@string/typeBook">
        </TextView>
        <EditText
            android:background="@drawable/offunderline"

            android:id="@+id/etChiTietLoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:text="@string/author">
        </TextView>
        <EditText
            android:background="@drawable/offunderline"
            android:id="@+id/etChiTietTacgia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:text="@string/producer">
        </TextView>
        <EditText
            android:background="@drawable/offunderline"
            android:id="@+id/etChiTietNSX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idtype"></TextView>
        <Spinner
            android:id="@+id/spinnerMaLoaiSua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnLuuThayDoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            ></Button>
    </LinearLayout>




</LinearLayout>