<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemActivity1"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarthembook"
        app:title="@string/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/picture"></TextView>
        <ImageButton
            android:background="#ff7a01"
            android:id="@+id/btnChonAnh"
            android:layout_width="100px"
            android:layout_height="100px"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_add_24"
            >
        </ImageButton>
    </LinearLayout>
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/idBook"></TextView>
        <EditText
            android:id="@+id/etIdThem"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/nameBook"></TextView>
        <EditText
            android:id="@+id/etTenThem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/typeBook"></TextView>
        <EditText
            android:id="@+id/etLoaiThem"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/author"></TextView>
        <EditText
            android:id="@+id/etTacGiaThem"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/producer"></TextView>
        <EditText
            android:id="@+id/etNSXThem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idtype"></TextView>
        <Spinner
            android:id="@+id/spinnerMaLoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnThemBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"
            android:layout_gravity="left">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </LinearLayout>

</LinearLayout>